--- a/posts/NLP/Text Pre-Processing/text_pre-processing.qmd
+++ b/posts/NLP/Text Pre-Processing/text_pre-processing.qmd
@@ -43,7 +43,7 @@ In this section we cover the key steps involved in text pre-processing:
 
 ## Packages and Data
 
-Text pre-processing will be done with the **{tidytext}** and **{textstem}** packages. The data-set we are using for text pre-processing is the book of Matthew from the New Testament of the King James Bible. We will access this through the <code>new_testament()</code> function in the **{scriptuRs}** package.
+Text pre-processing will be done with the **{tidytext}** and **{textstem}** packages. The data-set we are using for text pre-processing is the New Testament from the King James Bible. We will access this through the <code>new_testament()</code> function in the **{scriptuRs}** package.
 
 ```{r}
 #| label: load-packages
@@ -53,18 +53,16 @@ library(tidytext)
 library(textstem)
 
 newtest_df <- scriptuRs::new_testament %>% tibble()
-matthew_df <- newtest_df %>% 
-  filter(book_title == "Matthew")
 
-glimpse(matthew_df)
+glimpse(newtest_df)
 
-matthew_df %>% 
+newtest_df %>% 
   summarise(mean.verse.length = mean(str_count(text, pattern = "\\w+")),
             min.verse.length = min(str_count(text, pattern = "\\w+")),
             max.verse.length = max(str_count(text, pattern = "\\w+")))
 ```
 
-Each row of our dataset corresponds to a verse within the book of Matthew. A verse contains on average, 22.2 words.
+Each row of our dataset corresponds to a verse within the New Testament. A verse contains on average, 22.7 words.
 
 ## Tokenisation
 
@@ -74,22 +72,22 @@ Given "words" is the default token (identified through the <code>token</code> ar
 
 ```{r}
 #| label: tokenisation
-matthew_token_df <- matthew_df %>% 
+newtest_token_df <- newtest_df %>% 
   unnest_tokens(input = text,
                 output = "word")
 
 
-glimpse(matthew_token_df)
+glimpse(newtest_token_df)
 
 ```
 
-Now we have a data frame `matthew_token_df` where each row corresponds to a word (identified in the column `word`) within each verse.
+Now we have a data frame `newtest_token_df` where each row corresponds to a word (identified in the column `word`) within each verse.
 
 Now, we can use `count()` to see what the most common words are:
 
 ```{r}
 #| label: count_1
-matthew_token_df %>% 
+newtest_token_df %>% 
   count(word, sort = TRUE) %>% 
   head()
 ```
@@ -103,15 +101,15 @@ Before we can remove any stop words from our dataset, we first need to identify 
 Using `anti_join()` we can select only the words in our dataset that do not match any of the stop words.
 
 ```{r}
-matthew_token_df <- matthew_token_df %>% 
+newtest_token_df <- newtest_token_df %>% 
   anti_join(stop_words, by = "word")
 
-matthew_token_df %>% 
+newtest_token_df %>% 
   count(word, sort = TRUE) %>% 
   head(10)
 ```
 
-By removing stop words, we reduced the number of rows in our tokenised dataset from 23,685 to just 7,563! While our list of the most common words is certainly more informative, there are still some words that would be considered stop words, but were missed by our initial anti join. We will quickly fix that up now.
+By removing stop words, we reduced the number of rows in our tokenised dataset from 180,392 to just 52,850! While our list of the most common words is certainly more informative, there are still some words that would be considered stop words, but were missed by our initial anti join. We will quickly fix that up now.
 
 ```{r}
 #| label: more-stop-words
@@ -119,21 +117,21 @@ By removing stop words, we reduced the number of rows in our tokenised dataset f
 
 more_stop_words <- tibble(word = c("thou", "thee", "thy", "hath", "shalt", "woe", "ye"))
 
-matthew_token_df <- matthew_token_df %>% 
+newtest_token_df <- newtest_token_df %>% 
   anti_join(more_stop_words)
 
-matthew_token_df %>% 
+newtest_token_df %>% 
   count(word, sort = TRUE) %>% 
   head(10)
 ```
 
 ### Lemmatisation
 
-Our final pre-processing stage is to reduce the words down to their base word or "lemma". This will ensure that words with different tenses are captured as one word. For example, in our data-set there are 4 variations of the word "gather". If we do not reduce these down to their lemma "gather", our analyses will look at each word as a completely separate entity.
+Our final pre-processing stage is to reduce the words down to their base word or "lemma". This will ensure that words with different tenses are captured as one word. For example, in our data-set there are 5 variations of the word "gather". If we do not reduce these down to their lemma "gather", our analyses will look at each word as a completely separate entity.
 
 ```{r}
 #| label: gather-lemma
-matthew_token_df %>% 
+newtest_token_df %>% 
   filter(str_detect(word, "gather")) %>% count(word, sort = TRUE)
 
 ```
@@ -142,15 +140,15 @@ This time we will use `lemmatize_words()` from the **{textstem}** package within
 
 ```{r}
 #| label: lemmatise-words
-matthew_lemma_df <- matthew_token_df %>% 
+newtest_lemma_df <- newtest_token_df %>% 
   mutate(lemma = lemmatize_words(word))
   
-matthew_lemma_df %>% 
+newtest_lemma_df %>% 
   filter(str_detect(word, "gather")) %>% 
   count(lemma)
 
 ```
 
-Now we can see that the "gather" has been extracted from the words "gathered" and "gathering". As "gathereth" isn't a word that exists in dictionaries these days, it has been ignored. Given it was only used twice in the book, we will leave it as is for now.
+Now we can see that the "gather" has been extracted from the words "gathered" and "gathering". As "gathereth" isn't a word that exists in dictionaries these days, it has been ignored. Given its rare frequency, we will leave it as is for now.
 
-Now we are confident that our dataset contains meaningful words that have been reduced down to their base. The next step is to explore different ways to vecrtorise this cleaned text.
+Now we are confident that our dataset contains meaningful words that have been reduced down to their base. The next step is to explore different ways to vectorize this cleaned text.
