--- a/index.qmd
+++ b/index.qmd
@@ -12,6 +12,6 @@ about:
       href: mackay_aaron@pm.me
 ---
 
-I'm Aaron. I work as a data analyst primarily using R. I am interested in using data and data story-telling to broaden our understanding of the world. In my spare time I ride my bicycle, practice back flips and make strange electronic music.
+I'm Aaron. I work as a data analyst primarily using R. I am interested in using data and data story-telling to broaden our understanding of the world. In my spare time I ride my bicycle, practice hand-stands and make strange electronic music.
 
 This blog is where I post things that I have learned through my data analytics and programming journey as well as other interesting tidbits.
